service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cups-service-ui
  namespace: cups-service-ui
spec:
  type: NodePort
  selector:
    app: cups-service-ui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32000  # Change this if needed
