ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cups-service-ui-ingress
  namespace: cups-service-ui
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: cups-ui.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cups-service-ui
                port:
                  number: 80
